--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "main": "src/index.js",
   "scripts": {
-    "dev": "micro-dev",
+    "dev": "micro-dev -p 4000",
     "start": "micro",
     "lint": "xo",
     "test": "npm run lint && ava",
@@ -16,16 +16,20 @@
     "extends": "prettier"
   },
   "dependencies": {
-    "micro": "latest"
+    "joi": "^14.0.4",
+    "micro": "latest",
+    "micro-cors": "^0.1.1",
+    "micro-joi": "^3.1.0",
+    "microrouter": "^3.1.3"
   },
   "license": "MIT",
   "devDependencies": {
     "ava": "0.21.0",
     "eslint-config-prettier": "2.3.0",
+    "micro-dev": "latest",
     "prettier": "1.5.3",
     "request-promise": "4.2.1",
     "test-listen": "1.0.2",
-    "xo": "0.18.2",
-    "micro-dev": "latest"
+    "xo": "0.18.2"
   }
 }
